# ABC_HW

./: CMakeLists.txt  Plane.cpp  Plane.h  Ship.cpp  Ship.h  Train.cpp  Train.h  Transport.cpp  Transport.h  container.cpp  container.h  main.cpp  rnd.h
tests/: test01.txt
